--- a/src/pages/OurProgram/components/BroadCard/BroadCard.css
+++ b/src/pages/OurProgram/components/BroadCard/BroadCard.css
@@ -1,277 +1,132 @@
-/* Default styles for larger screens */
 .broad_card {
-    margin: 20px;
+    margin: 20px auto;
     width: 80%;
-    height: 240px;
+    max-width: 1000px; /* Prevents too much stretching on large screens */
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
 }
 
+/* Image Styling */
 .card_img {
     height: 150px;
     width: 150px;
     object-fit: contain;
     border-radius: 50%;
-    align-items: center;
+    display: block;
+    margin: 10px auto;
 }
 
+/* Title */
 .broad_title {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     color: #F27A0A;
     font-size: 36px;
 }
 
+/* Content */
 .broad_content {
     font-size: 24px;
     color: #041D60;
 }
 
-@media screen and (max-width:384px) {
-    .card_img{
-        height: 100%;
-        width: 100%;
-        border: 1px solid black;
-    }
-    
-    
-}
-@media screen and (min-width: 430px) and (max-width: 767px) {
-    .broad_card {
-        width: 95%;
-        padding: 8px;
-        height: 280px;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    .broad_title {
-        font-size: 26px;
-        margin-top: 20px;
-    }
-
-    .broad_content {
-        font-size: 20px;
-    }
-
-    .card_img {
-        height: 90px;
-        width: 90px;
-        margin: 20px;
-    }
-}
-
-
-
-
-@media screen and(max-width:600px) {
-    .broad_card{
-        height: 70%;
-        width: 80%;
-    }
-    .broad_content{
-        width: auto;
-        height: auto;
-    }
-}
-/* Media query for screens smaller than 768px */
-@media screen and (max-width: 800px) {
-    .broad_card {
-        width: 85%;
-        padding: 10px;
-        height: 200px;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-    }
-
-    .broad_title {
-        font-size: 30px;
-        text-align: center;
-        margin-top: 25px;
-    }
-
-    .broad_content {
-        font-size: 22px;
-        text-align: center;
-    }
-
-    .card_img {
-        height: 100px;
-        width: 100px;
-        margin: 35px;
-    }
-}
-@media screen and (min-width: 975px) {
-    .broad_card {
-        width: 85%;
-        padding: 10px;
-        height: 200px;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-    }
-
-    .broad_title {
-        font-size: 30px;
-        text-align: center;
-        margin-top: 25px;
-    }
-
-    .broad_content {
-        font-size: 22px;
-        text-align: center;
-    }
-
-    .card_img {
-        height: 100px;
-        width: 100px;
-        margin: 35px;
-    }
-}
-@media screen and (min-width: 801px) and (max-width: 975px) {
-    .broad_card {
-        width: 85%;
-        padding: 10px;
-        height: 200px;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-    }
-
-    .broad_title {
-        font-size: 30px;
-        text-align: center;
-        margin-top: 25px;
-    }
-
-    .broad_content {
-        font-size: 22px;
-        text-align: center;
-    }
-
-    .card_img {
-        height: 100px;
-        width: 100px;
-        margin: 35px;
-    }
-}
-
-/* Media query for screens smaller than 480px */
-@media screen and (max-width: 480px) {
-    .broad_card {
-        width: 95%;
-        padding: 8px;
-        height: 180px;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    .broad_title {
-        font-size: 26px;
-        margin-top: 20px;
-    }
-
-    .broad_content {
-        font-size: 20px;
-    }
-
-    .card_img {
-        height: 90px;
-        width: 90px;
-        margin: 20px;
-    }
-}
-@media screen and (max-width: 430px) {
-    .broad_card {
-        width: 90%;
-        height: 250px;
-        padding: 5px;
-        flex-direction: column;
-        justify-content: center;
-    }
-    .ourprogram_content{
-        width: 380px;
-        margin-top: 0px;
-    }
-    .ourprogram_button{
-        margin-top: 10px;
-    }
-    .title_tag{
-        margin-top: 0px;
-        margin-bottom: 10px;
-    }
-
-    .broad_title {
-        font-size: 24px;
-        margin-top: 15px;
-        text-align: center;
-    }
-
-    .broad_content {
-        font-size: 18px;
-        text-align: center;
-    }
-
-    .card_img {
-        height: 80px;
-        width: 80px;
-        margin: 20px;
-    }
-}
-
-@media screen and (max-width: 412px) {
-    .broad_card {
-        width: 90%;
-        height: 250px;
-        padding: 5px;
-        flex-direction: column;
-        justify-content: center;
-    }
-    .ourprogram_content{
-        width: 380px;
-        margin-top: 0px;
-    }
-    .ourprogram_button{
-        margin-top: 10px;
-    }
-    .title_tag{
-        margin-top: 0px;
-        margin-bottom: 10px;
-    }
-
-    .broad_title {
-        font-size: 24px;
-        margin-top: 15px;
-        text-align: center;
-    }
-
-    .broad_content {
-        font-size: 18px;
-        text-align: center;
-    }
-
-    .card_img {
-        height: 80px;
-        width: 80px;
-        margin: 20px;
-    }
-}
-
-/* Media query for screens larger than 1200px */
+/* Large screens (Desktops, 1200px and above) */
 @media screen and (min-width: 1200px) {
     .broad_card {
-        width: 70%;
-        height: 280px;
+        width: 60%;
+        padding: 30px;
+        max-width: 900px;
     }
-
     .broad_title {
         font-size: 40px;
     }
-
     .broad_content {
         font-size: 26px;
     }
-
     .card_img {
         height: 180px;
         width: 180px;
+    }
+}
+
+/* Medium screens (Tablets, 768px - 1199px) */
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .broad_card {
+        width: 75%;
+        padding: 20px;
+        max-width: 800px;
+    }
+    .broad_title {
+        font-size: 32px;
+    }
+    .broad_content {
+        font-size: 22px;
+    }
+    .card_img {
+        height: 140px;
+        width: 140px;
+    }
+}
+
+/* Small screens (Mobile devices, up to 767px) */
+/* Medium screens (Tablets, 768px - 1199px) */
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .broad_card {
+        width: 75%;
+        padding: 20px;
+        max-width: 800px;
+        display: flex;
+        flex-direction: column-reverse; /* Ensures image appears first */
+    }
+    .broad_title {
+        font-size: 32px;
+    }
+    .broad_content {
+        font-size: 22px;
+    }
+    .card_img {
+        height: 140px;
+        width: 140px;
+    }
+}
+
+/* Extra small screens (up to 480px) */
+@media screen and (max-width: 480px) {
+    .broad_card {
+        width: 95%;
+        padding: 5px;
+    }
+    .broad_title {
+        font-size: 20px;
+    }
+    .broad_content {
+        font-size: 16px;
+    }
+    .card_img {
+        height: 80px;
+        width: 80px;
+    }
+}
+
+/* Very small screens (Tiny mobile screens, up to 320px) */
+@media screen and (max-width: 320px) {
+    .broad_card {
+        width: 98%;
+        padding: 5px;
+    }
+    .broad_title {
+        font-size: 18px;
+    }
+    .broad_content {
+        font-size: 14px;
+    }
+    .card_img {
+        height: 70px;
+        width: 70px;
     }
 }
