--- a/src/pages/AboutUs/components/Tab/Tab.css
+++ b/src/pages/AboutUs/components/Tab/Tab.css
@@ -1,6 +1,5 @@
-
-
-.title_tag{
+/* General Styles */
+.title_tag {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -14,119 +13,322 @@
     background-color: #041D60;
 }
 
-.title_tag h2{
+.title_tag h2 {
     text-align: center;
     background: linear-gradient(30deg,#F27A0A, #041D60);
-    -webkit-background-clip: text; 
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     margin: 0;
     padding: 0;
     font-size: 34px;
 }
 
-
-.tab_contents{
-    padding:  0px 30px 0px 30px;
-
+.tab_contents {
+    padding: 0px 30px;
     margin: 0;
 }
 
-.tab_content_paragraph{
+.tab_content_paragraph {
     font-size: 28px;
     font-weight: 400;
     line-height: 45px;
-    color:#041D60;
+    color: #041D60;
     padding: 20px 0;
 }
 
-.tab_img{
+.tab_img {
     width: 90%;
     height: 400px;
     object-fit: contain;
-    border-radius: 30px !important;
-    border: 1px transparent !important;
-}
-.tab_container{
-    padding: 5px 40px 0 5px
+    border-radius: 30px;
+    border: 1px transparent;
 }
 
+.tab_container {
+    padding: 5px 40px 0 5px;
+}
 
-.content{
+.content {
     width: 100%;
     text-wrap: pretty;
 }
 
-.tab_contents h3{
-    text-align: start !important;
+.tab_contents h3 {
+    text-align: start;
     line-height: 50px;
     font-weight: 450;
     font-size: 32px;
-    color:#041D60
+    color: #041D60;
 }
 
+/* Extra Large Screens (4K, Ultra HD, Large Monitors) */
+@media (min-width: 1600px) {
+    .tab_contents {
+        padding: 40px;
+    }
 
+    .tab_img {
+        width: 80%;
+        height: 500px;
+    }
 
-@media (max-width: 768px) {
-    .tab_contents{
+    .tab_contents h3 {
+        font-size: 36px;
+        line-height: 55px;
+    }
+
+    .tab_content_paragraph {
+        font-size: 30px;
+        line-height: 50px;
+    }
+
+    .title_tag h2 {
+        font-size: 40px;
+    }
+}
+
+/* Large Screens (Desktops, Laptops) */
+@media (min-width: 1280px) and (max-width: 1599px) {
+    .tab_contents {
         padding: 30px;
     }
-    
-    .tab_img{
+
+    .tab_img {
+        width: 85%;
+        height: 450px;
+    }
+
+    .tab_contents h3 {
+        font-size: 34px;
+        line-height: 50px;
+    }
+
+    .tab_content_paragraph {
+        font-size: 28px;
+        line-height: 45px;
+    }
+
+    .title_tag h2 {
+        font-size: 38px;
+    }
+}
+
+/* Standard Desktops & MacBook Pro */
+@media (min-width: 1025px) and (max-width: 1279px) {
+    .tab_contents {
+        padding: 25px;
+    }
+
+    .tab_img {
         width: 90%;
-        height: 200px;
-        object-fit: contain;
-        border-radius: 30px;
-        border: 1px transparent;
-    }
-    
-    .tab_contents h3{
-        text-align: justify !important;
-        line-height: 35px;
-        font-weight: 400;
-        font-size: 20px !important;
-        color:#041D60;
+        height: 400px;
     }
 
-    .tab_container{
-        padding: 10px
+    .tab_contents h3 {
+        font-size: 32px;
+        line-height: 45px;
     }
 
-    .title_tag h2{
-        text-align: center;
-        background: linear-gradient(30deg,#F27A0A, #041D60);
-        -webkit-background-clip: text; 
-        -webkit-text-fill-color: transparent;
-        margin: 0;
-        font-size: 20px;
-    }
-
-
-
-    .tab_content_paragraph{
-        font-size: 20px;
-        font-weight: 400;
+    .tab_content_paragraph {
+        font-size: 26px;
         line-height: 40px;
-        color:#041D60;
-        padding: 10px 0;
+    }
+
+    .title_tag h2 {
+        font-size: 34px;
+    }
+}
+
+/* Tablets (Portrait and Landscape) */
+@media (max-width: 1024px) {
+    .tab_contents {
+        padding: 20px;
+    }
+
+    .tab_img {
+        width: 100%;
+        height: 300px;
+    }
+
+    .tab_contents h3 {
+        font-size: 26px;
+        line-height: 40px;
+    }
+
+    .tab_content_paragraph {
+        font-size: 24px;
+        line-height: 40px;
+    }
+
+    .title_tag h2 {
+        font-size: 30px;
+    }
+}
+
+/* iPads & Small Tablets */
+@media (max-width: 820px) {
+    .tab_contents {
+        padding: 18px;
+    }
+
+    .tab_img {
+        width: 95%;
+        height: 280px;
+    }
+
+    .tab_contents h3 {
+        font-size: 24px;
+        line-height: 38px;
+    }
+
+    .tab_content_paragraph {
+        font-size: 22px;
+        line-height: 36px;
+    }
+
+    .title_tag h2 {
+        font-size: 28px;
+    }
+}
+
+/* Small Tablets and Large Phones (Landscape) */
+@media (max-width: 768px) {
+    .tab_contents {
+        padding: 15px;
+    }
+
+    .tab_img {
+        width: 100%;
+        height: 250px;
+    }
+
+    .tab_contents h3 {
+        font-size: 22px;
+        line-height: 35px;
+        text-align: justify;
+    }
+
+    .tab_content_paragraph {
+        font-size: 20px;
+        line-height: 35px;
         width: 400px;
         text-align: justify;
     }
 
+    .title_tag h2 {
+        font-size: 24px;
+    }
+
+    .tab_container {
+        padding: 10px;
+    }
+
+    .tab_title {
+        font-size: 1rem;
+        margin: 0 15px;
+    }
 }
 
-.tab_title {
-    font-size: 1.2rem; 
-    white-space: nowrap; 
-    overflow: hidden; 
-    text-overflow: ellipsis; 
-    max-width: 100%; 
-    display: block; 
-  }
-  
-  @media (max-width: 768px) {
-    .tab_title {
-      font-size: 1rem; 
-      margin: 0 15px
+/* iPhone 14, 13, 12, 11, X, XR, 8, 7, 6 (Portrait) */
+@media (max-width: 430px) {
+    .tab_contents {
+        padding: 12px;
     }
-  }
-  
+
+    .tab_img {
+        width: 100%;
+        height: 220px;
+    }
+
+    .tab_contents h3 {
+        font-size: 20px;
+        line-height: 32px;
+    }
+
+    .tab_content_paragraph {
+        font-size: 18px;
+        line-height: 30px;
+    }
+
+    .title_tag h2 {
+        font-size: 22px;
+    }
+}
+
+/* Mobile Phones (Android & iPhones) */
+@media (max-width: 414px) {
+    .tab_contents {
+        padding: 10px;
+    }
+
+    .tab_img {
+        width: 100%;
+        height: 200px;
+    }
+
+    .tab_contents h3 {
+        font-size: 18px;
+        line-height: 30px;
+    }
+
+    .tab_content_paragraph {
+        font-size: 16px;
+        line-height: 30px;
+    }
+
+    .title_tag h2 {
+        font-size: 20px;
+    }
+}
+
+/* Small Mobile Phones (Older Androids, iPhone SE) */
+@media (max-width: 360px) {
+    .tab_contents {
+        padding: 5px;
+    }
+
+    .tab_img {
+        width: 100%;
+        height: 180px;
+    }
+
+    .tab_contents h3 {
+        font-size: 16px;
+        line-height: 28px;
+    }
+
+    .tab_content_paragraph {
+        font-size: 14px;
+        line-height: 25px;
+    }
+
+    .title_tag h2 {
+        font-size: 18px;
+    }
+}
+
+/* Very Small Devices (Mini Phones, Older Models) */
+@media (max-width: 320px) {
+    .tab_contents {
+        padding: 3px;
+    }
+
+    .tab_img {
+        width: 100%;
+        height: 160px;
+    }
+
+    .tab_contents h3 {
+        font-size: 14px;
+        line-height: 22px;
+    }
+
+    .tab_content_paragraph {
+        font-size: 12px;
+        line-height: 20px;
+    }
+
+    .title_tag h2 {
+        font-size: 16px;
+    }
+}
