--- a/src/pages/AboutUs/AboutUs.css
+++ b/src/pages/AboutUs/AboutUs.css
@@ -13,7 +13,10 @@ h5{
     padding: 30px 0px 0px 30px;
     margin-left: 80px;
 }
-
+.about_cards{
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
 
 .ourmission p{
     width: 917.11px;
