--- a/src/pages/AboutUs/components/Tab/Tab.css
+++ b/src/pages/AboutUs/components/Tab/Tab.css
@@ -305,6 +305,7 @@
     .title_tag h2 {
         font-size: 14.5px;
         width: fit-content;
+        margin-left: 10px;
     }
     
 }
@@ -333,5 +334,7 @@
     .title_tag h2 {
         font-size: 16px;
         width: fit-content;
+        align-items: center;
+        text-align: center;
     }
 }
