--- a/src/pages/OurProgram/OurProgram.css
+++ b/src/pages/OurProgram/OurProgram.css
@@ -5,6 +5,30 @@
   --hover-border: 2px solid var(--primary-color);
   --transition: all 0.3s ease-in-out;
 }
+.grade_card {
+  position: relative;
+  overflow: hidden;
+}
+
+.grade_card .overlay-text {
+  opacity: 0;
+  background: rgba(0, 0, 0, 0.6); /* Black overlay with 60% opacity */
+  color: white; /* Ensures text is visible */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  font-size: large;
+  line-height: 300%;
+  justify-content: center;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.grade_card:hover .overlay-text {
+  opacity: 1;
+}
 
 /* Base Styles */
 .ourprogram {
